youfull/objects/Sales_Org_Summary__c.object
<CustomObject>
    <fields>
        <fullName>MRKT_TAG_3_VAR_DIFF_CNT__c</fullName>
        <formula>TEXT(MRKT_TAG_3_PLAN_CNT__c - MRKT_TAG_3_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MarketTag 3 Variance Difference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_3__c</fullName>
        <label>Market tag 3 (DO NOT USE)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_4_SPPY_CNT__c</fullName>
        <label>market tag 4 sppy actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_TRACKER_1_FRCST_CNT__c</fullName>
        <description>Forecast activity report. Forecast for # of candidates (market tag 1)</description>
        <label>Market Tag Tracker 1 Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_TRACKER_1_INPUT__c</fullName>
        <label>Market Tag Tracker 1 Forecast Input</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_TRACKER_1_PCT__c</fullName>
        <label>Market Tag Tracker 1 % Achieved</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_TRACKER_1_PLAN__c</fullName>
        <label>Market Tag Tracker 1 Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_TRACKER_2_FRCST_CNT__c</fullName>
        <description>Forecast activity report. Forecast for opportunity meeting (market tag 2)</description>
        <label>Market Tag Tracker 2 Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_TRACKER_2_INPUT__c</fullName>
        <label>Market Tag Tracker 2 Forecast Input</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_TRACKER_2_PCT__c</fullName>
        <label>Market Tag Tracker 2 % Achieved</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_TRACKER_2_PLAN__c</fullName>
        <label>Market Tag Tracker 2 Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_TRACKER_3_FRCST_CNT__c</fullName>
        <label>Market Tag Tracker 3 Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_TRACKER_3_INPUT__c</fullName>
        <label>Market Tag Tracker 3 Forecast Input</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_TRACKER_3_PCT__c</fullName>
        <label>Market Tag Tracker 3 % Achieved</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_TRACKER_3_PLAN__c</fullName>
        <label>Market Tag Tracker 3 Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NET_SLS_AMT__c</fullName>
        <label>Net Sales Actual (Do not Use - Delete)</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NET_SLS_DIV_RNK__c</fullName>
        <label>Net sales division rank</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NET_SLS_FRCST_GOAL__c</fullName>
        <label>Net Sales % Goal Achieved</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NET_SLS_FRCST_INPUT__c</fullName>
        <label>Net Sales Forecast Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NET_SLS_INVC_AMT__c</fullName>
        <label>Net sales Invoiced</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NET_SLS_LCA_CNT__c</fullName>
        <label>Net Sales Last Campaign Analysis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NET_SLS_My_Actions_CNT__c</fullName>
        <label>Net Sales My Actions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NET_SLS_PLAN_AMT__c</fullName>
        <label>Net Sales Plan</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NET_SLS_PLAN_SPPY_AMT__c</fullName>
        <label>Net sales sppy plan</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NET_SLS_RES_CNT__c</fullName>
        <formula>IF(NET_SLS_PLAN_AMT__c == 0, 0, TOTAL_NET_SLS_AMT__c / NET_SLS_PLAN_AMT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Sales Results</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NET_SLS_SMTB_AMT__c</fullName>
        <label>Net sales Submitted</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NET_SLS_SPPY_AMT__c</fullName>
        <label>Net Sales PY</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NET_SLS_VAR_DIFF_CNT__c</fullName>
        <formula>TEXT(NET_SLS_PLAN_AMT__c - NET_SLS_AMT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net sales Variance Difference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NET_SLS_VAR__c</fullName>
        <formula>IF ( NET_SLS_PLAN_AMT__c = 0, 0, TOTAL_NET_SLS_AMT__c / NET_SLS_PLAN_AMT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales % Attainment</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Num_Campaign_Stars__c</fullName>
        <label>Num Campaign Stars</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPERTNL_CMPGN_NR__c</fullName>
        <label>Operational Campaign Number</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORD_SUBMTD_CNT__c</fullName>
        <label>Act. Reps Submitted</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POT_RMOVL_CNT__c</fullName>
        <description>Count of representative with X number of campaigns inactive. X is a market parameter in CDW.</description>
        <inlineHelpText>Count of representative with X number of campaigns inactive. X is a market parameter in CDW.</inlineHelpText>
        <label>Potential Removals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRSPCTS_FRCST_CNT__c</fullName>
        <description>Forecast activity report. Forecast for prospect</description>
        <label>Prospects Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRSPCTS_FRCST_PLAN__c</fullName>
        <label>Prospects Forecast Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRSPCTS_INPUT__c</fullName>
        <label>Prospects Forecast Input</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRSPCTS_PCT__c</fullName>
        <description>Percentage of Prospects Forecast against Goal</description>
        <label>Prospects % Achieved</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PRSPCT_FRCST_CNT__c</fullName>
        <description>Forecast activity report. Forecast for prospect</description>
        <label>prospect forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRSPCT_FRCST_INPUT__c</fullName>
        <label>Prospect Forecast Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Personal_Info_1__c</fullName>
        <label>Personal Info 1 (DO NOT USE)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Info_2__c</fullName>
        <label>Personal Info 2 (DO NOT USE)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMOVL_CNT__c</fullName>
        <label>Removals Actuals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RMOVL_DIV_RNK__c</fullName>
        <label>removals division rank</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RMOVL_FRCST_GOAL__c</fullName>
        <label>Removal % Goal Achieved</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RMOVL_FRCST_INPUT__c</fullName>
        <label>Removal Forecast Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RMOVL_LCA_CNT__c</fullName>
        <label>Removals Last Campaign Analysis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RMOVL_My_Actions_CNT__c</fullName>
        <label>Removals My Actions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RMOVL_PLAN_CNT__c</fullName>
        <label>removals plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RMOVL_PLAN_SPPY_CNT__c</fullName>
        <label>removals sppy plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RMOVL_RES_CNT__c</fullName>
        <formula>IF(RMOVL_PLAN_CNT__c == 0, 0, RMOVL_CNT__c / RMOVL_PLAN_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Removals Results</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RMOVL_SPPY_CNT__c</fullName>
        <label>removals sppy actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RMOVL_VAR_CNT__c</fullName>
        <formula>IF(RMOVL_PLAN_CNT__c == 0, 0, RMOVL_CNT__c / RMOVL_PLAN_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Removals Variance</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RMOVL_VAR_DIFF_CNT__c</fullName>
        <formula>TEXT(RMOVL_PLAN_CNT__c  -  RMOVL_CNT__c)</formula>
        <label>Removals Variance Difference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RNSTMT_CNT__c</fullName>
        <label>Actual Reinstatements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RNSTMT_DIV_RNK__c</fullName>
        <label>reinstatements division rank</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RNSTMT_FRCST_CNT__c</fullName>
        <description>Forecast activity report. Forecast for reinstatement for campaign</description>
        <label>Reinstatement Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RNSTMT_FRCST_GOAL__c</fullName>
        <label>Reinstatement % Goal Achieved</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RNSTMT_FRCST_INPUT__c</fullName>
        <label>Reinstatement Forecast Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RNSTMT_LCA_CNT__c</fullName>
        <label>Reinstatements Last Campaign Analysis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RNSTMT_My_Actions_CNT__c</fullName>
        <label>Reinstatements My Actions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RNSTMT_PLAN_CNT__c</fullName>
        <label>Reinstatements Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RNSTMT_PLAN_SPPY_CNT__c</fullName>
        <label>reinstatements sppy plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RNSTMT_RES_CNT__c</fullName>
        <formula>IF(RNSTMT_PLAN_CNT__c == 0, 0, RNSTMT_CNT__c / RNSTMT_PLAN_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reinstatements Results</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RNSTMT_SPPY_CNT__c</fullName>
        <label>reinstatements sppy actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RNSTMT_VAR_CNT__c</fullName>
        <formula>IF(RNSTMT_PLAN_CNT__c == 0, 0, RNSTMT_CNT__c / RNSTMT_PLAN_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reinstatements Variance</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RNSTMT_VAR_DIFF_CNT__c</fullName>
        <formula>TEXT(RNSTMT_PLAN_CNT__c - RNSTMT_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reinstatements Variance Difference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTURN_NET_SLS_AMT__c</fullName>
        <label>Actual Returns</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RTURN_NET_SLS_DIV_RNK__c</fullName>
        <label>returned sales division rank</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RTURN_NET_SLS_FRCST_CNT__c</fullName>
        <label>Return Net Sales Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RTURN_NET_SLS_LCA__c</fullName>
        <label>Returned Sales Last Campaign Analysis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RTURN_NET_SLS_My_Actions__c</fullName>
        <label>Returned Sales My Actions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RTURN_NET_SLS_PLAN_AMT__c</fullName>
        <label>returned sales plan</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RTURN_NET_SLS_PLAN_SPPY_AMT__c</fullName>
        <label>returned sales sppy plan</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RTURN_NET_SLS_RES__c</fullName>
        <formula>IF(RTURN_NET_SLS_PLAN_AMT__c == 0, 0, RTURN_NET_SLS_AMT__c / RTURN_NET_SLS_PLAN_AMT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Returned Sales Results</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RTURN_NET_SLS_RSNG_STR_CNT__c</fullName>
        <label>Return Net Sales Rising Star Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RTURN_NET_SLS_SPPY_AMT__c</fullName>
        <label>returned sales sppy actual</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RTURN_NET_SLS_TAR_CNT__c</fullName>
        <label>Return Net Sales Count at Risk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RTURN_NET_SLS_TAR_LAST_CMPGN_CNT__c</fullName>
        <label>Return Net Sales Count at Risk Last Camp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RTURN_NET_SLS_VAR_DIFF_CNT__c</fullName>
        <formula>TEXT(RTURN_NET_SLS_PLAN_AMT__c - RTURN_NET_SLS_AMT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Returned Sales Variance Difference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTURN_NET_SLS_VAR__c</fullName>
        <formula>IF(RTURN_NET_SLS_PLAN_AMT__c == 0, 0, RTURN_NET_SLS_AMT__c / RTURN_NET_SLS_PLAN_AMT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Returned Sales Variance</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SLS_ORG_DESC_TXT__c</fullName>
        <label>Area</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLS_ORG_LVL_DESC_TXT__c</fullName>
        <label>Sales Org Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLS_ORG_PAR__c</fullName>
        <formula>ZONE_MGR__r.DFALT_DIV_NM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLS_ORG_SUMRY_KEY__c</fullName>
        <description>Sales Org Summary Key.  Format: MRKT_ID+CMPGN_NR+ORG_TYPE+ORG_NAME</description>
        <externalId>true</externalId>
        <label>SLS_ORG_SUMRY_KEY__c</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>STF_CNT__c</fullName>
        <label>staff count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STF_DIV_RNK__c</fullName>
        <label>End Representative Division Rank</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STF_FRCST_CNT__c</fullName>
        <label>End Representative Forecast</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STF_FRCST_GOAL__c</fullName>
        <label>End Representative Forecast Goal</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STF_LCA_CNT__c</fullName>
        <label>End Representative LCA</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>STF_My_Actions_CNT__c</fullName>
        <label>End Representative My Actions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>STF_PLAN_CNT__c</fullName>
        <label>End Representative Plan</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STF_RES_CNT__c</fullName>
        <formula>IF(STF_PLAN_CNT__c == 0, 0, STF_CNT__c / STF_PLAN_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Representative Results</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>STF_RSNG_STR_CNT__c</fullName>
        <label>staff count of rising star</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STF_SPPY_CNT__c</fullName>
        <label>End Representative PY Actuals</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STF_TAR_CNT__c</fullName>
        <label>staff count at risk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STF_TAR_LAST_CMPGN_CNT__c</fullName>
        <label>staff count at risk!</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STF_VAR_DIFF_CNT__c</fullName>
        <formula>TEXT(STF_PLAN_CNT__c - STF_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Representative Variance Difference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TITLD_STF_CNT__c</fullName>
        <label>count of Unit leader and above actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITLD_STF_DIV_RNK__c</fullName>
        <label>count of Unit leader and above DR</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITLD_STF_LCA_CNT__c</fullName>
        <label>count of UL above Last Campaign Analysis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TITLD_STF_My_Actions_CNT__c</fullName>
        <label>count of UL above My Actions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TITLD_STF_PLAN_CNT__c</fullName>
        <label>count of Unit leader and above plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITLD_STF_PLAN_SPPY_CNT__c</fullName>
        <label>count of Unit leader and above sppy plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITLD_STF_RES_CNT__c</fullName>
        <formula>IF(TITLD_STF_PLAN_CNT__c == 0, 0, TITLD_STF_CNT__c / TITLD_STF_PLAN_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count of Unit leader and above Results</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TITLD_STF_SPPY_CNT__c</fullName>
        <label>count of Unit leader sppy actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITLD_STF_TAR2_CNT__c</fullName>
        <label>Titled - count at risk2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITLD_STF_VAR_CNT__c</fullName>
        <formula>IF(TITLD_STF_PLAN_CNT__c == 0, 0, TITLD_STF_CNT__c / TITLD_STF_PLAN_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count of Unit leader and above Variance</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TITLD_STF_VAR_DIFF_CNT__c</fullName>
        <formula>TEXT(TITLD_STF_PLAN_CNT__c - TITLD_STF_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidates Variance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TITL_0_STF_CNT__c</fullName>
        <label>candidates - count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_0_STF_DIV_RNK__c</fullName>
        <label>candidates - division rank</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_0_STF_LCA_CNT__c</fullName>
        <label>Candidates Last Campaign Analysis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TITL_0_STF_My_Actions_CNT__c</fullName>
        <label>Candidates My Actions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TITL_0_STF_PLAN_CNT__c</fullName>
        <label># of Candidates Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_0_STF_PLAN_SPPY_CNT__c</fullName>
        <label>candidates - sppy plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_0_STF_RES_CNT__c</fullName>
        <formula>IF(TITL_0_STF_PLAN_CNT__c == 0, 0, TITL_0_STF_CNT__c / TITL_0_STF_PLAN_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate Results</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TITL_0_STF_RSNG_STR_CNT__c</fullName>
        <label>candidates - count of rising star</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_0_STF_SPPY_CNT__c</fullName>
        <label>candidates - sppy actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_0_STF_TAR2_CNT__c</fullName>
        <label>Candidates - count at risk2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_0_STF_TAR_CNT__c</fullName>
        <label>candidates - count at risk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_0_STF_TAR_LAST_CMPGN_CNT__c</fullName>
        <label>candidates - count at risk!</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_0_STF_VAR_CNT__c</fullName>
        <formula>IF(TITL_0_STF_PLAN_CNT__c == 0, 0, TITL_0_STF_CNT__c / TITL_0_STF_PLAN_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidates Variance</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TITL_0_TL_STF_BASE_TAR_CNT__c</fullName>
        <label>TITL_0_TL_STF_BASE_TAR_CNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_0_TL_STF_BASE_TAR_LAST_CMPGN_CNT__c</fullName>
        <label>TITL_0_TL_STF_BASE_TAR_LAST_CMPGN_CNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_0_TL_STF_CNT__c</fullName>
        <label>TITL_0_TL_STF_CNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_0_TL_STF_RSNG_STR_CNT__c</fullName>
        <label>TITL_0_TL_STF_RSNG_STR_CNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_0_TL_STF_TAR_CNT__c</fullName>
        <label>TITL_0_TL_STF_TAR_CNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_0_TL_STF_TAR_LAST_CMPGN_CNT__c</fullName>
        <label>TITL_0_TL_STF_TAR_LAST_CMPGN_CNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_10_STF_CNT__c</fullName>
        <label>etc.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_10_STF_RSNG_STR_CNT__c</fullName>
        <label>etc.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_10_STF_TAR2_CNT__c</fullName>
        <label>Titl 10 - count at risk2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_10_STF_TAR_LAST_CMPGN_CNT__c</fullName>
        <label>etc.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_11_STF_CNT__c</fullName>
        <label>etc.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_11_STF_RSNG_STR_CNT__c</fullName>
        <label>etc.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_11_STF_TAR_LAST_CMPGN_CNT__c</fullName>
        <label>etc.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_1_STF_DIV_RNK__c</fullName>
        <label>UL - Division Rank</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_1_STF_LCA_CNT__c</fullName>
        <label>UM Last Campaign Analysis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TITL_1_STF_My_Actions_CNT__c</fullName>
        <label>UM My Actions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TITL_1_STF_PLAN_CNT__c</fullName>
        <label>Title 1 - Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_1_STF_PLAN_SPPY_CNT__c</fullName>
        <label>Title 1 - SPPY Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_1_STF_RES_CNT__c</fullName>
        <formula>IF(TITL_1_STF_PLAN_CNT__c == 0, 0, TITL_1_STF_CNT__c / TITL_1_STF_PLAN_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title 1 Results</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TITL_1_STF_SPPY_CNT__c</fullName>
        <label>Title 1 - SPPY Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_1_STF_VAR_CNT__c</fullName>
        <formula>IF(TITL_1_STF_PLAN_CNT__c == 0, 0, TITL_1_STF_CNT__c / TITL_1_STF_PLAN_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title 1 Variance</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TITL_1_TL_STF_BASE_TAR_CNT__c</fullName>
        <label>TITL_1_TL_STF_BASE_TAR_CNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_1_TL_STF_BASE_TAR_LAST_CMPGN_CNT__c</fullName>
        <label>TITL_1_TL_STF_BASE_TAR_LAST_CMPGN_CNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_1_TL_STF_CNT__c</fullName>
        <label>TITL_1_TL_STF_CNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_1_TL_STF_RSNG_STR_CNT__c</fullName>
        <label>TITL_1_TL_STF_RSNG_STR_CNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_1_TL_STF_TAR_CNT__c</fullName>
        <label>TITL_1_TL_STF_TAR_CNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_1_TL_STF_TAR_LAST_CMPGN_CNT__c</fullName>
        <label>TITL_1_TL_STF_TAR_LAST_CMPGN_CNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_2_STF_DIV_RNK__c</fullName>
        <label>Title 2 - Division Rank</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_2_STF_LCA_CNT__c</fullName>
        <label>AUM Last Campaign Analysis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>